--- a/style.css
+++ b/style.css
@@ -36,23 +36,24 @@
     font-weight: bold;
  }
  
- nav ul {
+ .gnavi__pc-style ul {
     display: flex;
     list-style: none;
+    margin-left:350px;
  }
  
- nav li {
-    margin-left: 20px;
+ .gnavi__pc-style li {
+    margin-left: 100px;
  }
  
- nav a {
+ .gnavi__pc-style a {
     text-decoration: none;
     color: #333;
     font-weight: bold;
     transition: 0.3s ease;
  }
  
- nav a:hover {
+ .gnavi__pc-style a:hover {
     color: #007bff;
  }
  
@@ -101,3 +102,106 @@
     left: 0;
     right: 0;
  }
+
+ /* ----------------------------------------------------------- */
+   
+  /*ここから下がハンバーガーメニューのスタイル*/
+  .gnavi__sp-style {
+    display: none;
+  }
+  @media screen and (max-width: 768px) {
+    .gnavi__pc-style {
+        display: none;    
+    }
+    .gnavi__sp-style {
+        display: block;
+    }
+    
+    /*メニューボタン　展開前*/
+    .menu-btn {
+        display : block;
+        position: fixed;
+        z-index: 3;
+        right: 30px;
+        top: 20px;
+        width: 42px;
+        height: 42px;
+        cursor: pointer;
+        text-align: center;
+    }
+    .menu-btn span {
+        display : block;
+        position: absolute;
+        width: 30px;
+        height: 2px ;
+        left: 6px;
+        background: #555;
+        transition: 0.3s ease-in-out;
+    }
+    .menu-btn span:nth-of-type(1) {
+        top: 10px;
+    }
+    .menu-btn span:nth-of-type(2) {
+        top: 20px;
+    }
+    .menu-btn span:nth-of-type(3) {
+        top: 30px;
+    }
+        
+    /*メニューボタン　展開後*/
+    .menu-btn.active span:nth-child(1) {
+        top: 16px;
+        left: 6px;
+        background :#fff;
+        transform: rotate(-45deg);
+    }
+    .menu-btn.active span:nth-child(2),
+    .menu-btn.active span:nth-child(3) {
+        top: 16px;
+        background :#fff;
+        transform: rotate(45deg);
+    }
+    
+    /*スマホ用のメニュー*/
+    .gnavi__sp-style {
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        color: #fff;
+        background-color: rgba(0,0,0,0.7);
+        text-align: center;
+        width: 100%;
+        height: 100vh;
+        opacity: 0;
+        transition: opacity .6s ease, visibility .6s ease;
+        display: flex;
+        align-items: center;
+    }
+    .gnavi__sp-style ul {
+        margin: 0 auto;
+        padding: 0;
+        width: 100%;
+    }
+    .gnavi__sp-style ul li {
+        list-style-type: none;
+        padding: 0;
+        width: 100%;
+        transition: .4s all;
+    }
+    .gnavi__sp-style ul li:last-of-type {
+        padding-bottom: 0;
+    }
+    .gnavi__sp-style ul li:hover{
+        background :#ddd;
+    }
+    .gnavi__sp-style ul li a {
+        display: block;
+        color: #fff;
+        padding: 1em 0;
+        text-decoration :none;
+    }
+    .gnavi__sp-style.active {
+        opacity: 1;
+    }
+  }
